--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -16,6 +16,7 @@ incremental==21.3.0
 iniconfig==1.1.1
 packaging==20.9
 pluggy==0.13.1
+psycopg2==2.8.6
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
