--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-redux": "^7.2.3",
+    "react-responsive-modal": "6.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
