--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -5,7 +5,7 @@ services:
       - 8000:8000
     depends_on:
       - db
-    command: bash -c "pip install -r requirements.txt && python api/manage.py runserver 0.0.0.0:8000"
+    command: bash -c "pip install -r requirements.txt && python api/manage.py makemigrations && python api/manage.py migrate && python api/manage.py runserver 0.0.0.0:8000"
   db:
     container_name: dev_db
     volumes:
