--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ constantly==15.1.0
 cryptography==3.4.7
 daphne==3.0.2
 Django==3.2.3
+djangorestframework==3.12.4
+django-cors-headers==3.7.0
 hyperlink==21.0.0
 idna==3.1
 incremental==21.3.0
