--- a/client/package.json
+++ b/client/package.json
@@ -45,9 +45,10 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-modal": "^3.13.1",
     "react-redux": "^7.2.3",
     "react-responsive-modal": "6.0.1",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
