--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
@@ -49,6 +51,7 @@
     "react-redux": "^7.2.3",
     "react-responsive-modal": "6.0.1",
     "react-router-dom": "^5.2.0",
+    "react-sidebar": "^3.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0"
