--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,6 +11,7 @@ cryptography==3.4.7
 daphne==3.0.2
 Django==3.2.3
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.6.0
 django-cors-headers==3.7.0
 hyperlink==21.0.0
 idna==3.1
