--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,15 @@
 
 version: '3'
 services:
+  redis:
+    image: redis:alpine
+    ports: 
+       - "6379:6379"
   api:
     image: python:latest
     working_dir: /code
+    links:
+      - redis
     volumes:
       - type: bind
         source: ./server
