--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ autobahn==21.3.1
 Automat==20.2.0
 cffi==1.14.5
 channels==3.0.3
+channels-redis==3.2.0
 colorama==0.4.4
 constantly==15.1.0
 cryptography==3.4.7
