--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ api/node_modules
 client/build
 api/api/api/__pycache__
 __pycache__
+api/api/.coverage
+api/gameroom/.coverage
+api/stats/.coverage
+api/users/.coverage
