--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,6 +8,7 @@ channels==3.0.3
 channels-redis==3.2.0
 colorama==0.4.4
 constantly==15.1.0
+coverage==5.5
 cryptography==3.4.7
 daphne==3.0.2
 Django==3.2.3
