--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ api/node_modules
 client/build
 api/api/api/__pycache__
 __pycache__
+api/.coverage
 api/api/.coverage
 api/gameroom/.coverage
 api/stats/.coverage
