--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jitsi": "^1.0.4",
     "react-modal": "^3.13.1",
     "react-redux": "^7.2.3",
     "react-responsive-modal": "6.0.1",
