--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ Django==3.2.3
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 django-cors-headers==3.7.0
+django-heroku==0.3.1
+gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.1
 incremental==21.3.0
