--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,13 @@ Automat = "==20.2.0"
 Django = "==3.2.3"
 pyOpenSSL = "==20.0.1"
 Twisted = "==21.2.0"
+channels-redis = "==3.2.0"
+coverage = "==5.5"
+djangorestframework = "==3.12.4"
+djangorestframework-simplejwt = "==4.6.0"
+django-cors-headers = "==3.7.0"
+django-heroku = "==0.3.1"
+gunicorn = "==20.1.0"
 
 [dev-packages]
 pytest = "*"
