--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     }
   },
   "scripts": {
-    "test": "jest --watch --silent --verbose --setupFilesAfterEnv ./src/test/setupTests.js",
-    "coverage": "jest --setupFilesAfterEnv ./src/test/setupTests.js --coverage --silent --watchAll=false",
+    "test": "jest --watch --silent --verbose --setupFilesAfterEnv ./test/setupTests.js",
+    "coverage": "jest --setupFilesAfterEnv ./test/setupTests.js --coverage --silent --watchAll=false",
     "dev": "webpack-cli serve --mode development --config config/webpack.config.dev.js",
     "build": "webpack --config config/webpack.config.production.js"
   },
