--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,8 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "jest-websocket-mock": "^2.2.0",
+    "mock-socket": "^9.0.3",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
